fix: resolved issues mantioned in PR
